начало html верстки

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 <body>
   //= template/header.html
 
+<main class="container">
+ //= template/features.html
+</main>
   <!-- <main class="page-main"> -->
     <!-- <h1 class="visually-hidden">Барбершоп "Бородинский" - Истинно мужская классика</h1> -->
     <!-- //= template/stats -->
@@ -24,7 +27,7 @@
     <!-- //= template/reviews.html -->
 
   <!-- </main> -->
-  <!-- //= template/footer.html -->
+   <!-- //= template/footer.html -->
 
 </body>
 
