закончил верстку html

--- a/src/index.html
+++ b/src/index.html
@@ -15,19 +15,14 @@
 
 <main class="container">
  //= template/features.html
+ //= template/news-new.html
+ //= template/gallery.html
+ //= template/contact.html
+ //= template/appointment.html
 </main>
-  <!-- <main class="page-main"> -->
-    <!-- <h1 class="visually-hidden">Барбершоп "Бородинский" - Истинно мужская классика</h1> -->
-    <!-- //= template/stats -->
+//= template/footer-new.html
 
-    <!-- //= template/advantage.html -->
-
-    <!-- //= template/news.html -->
-
-    <!-- //= template/reviews.html -->
-
-  <!-- </main> -->
-   <!-- //= template/footer.html -->
+//= template/modal.html
 
 </body>
 
