закончил  писать css для главной страницы и модалок

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,17 @@
 
 <main class="container">
  //= template/features.html
+ 
+ <div class="index-columns">
  //= template/news-new.html
  //= template/gallery.html
+</div>
+
+<div class="index-columns">
  //= template/contact.html
  //= template/appointment.html
+</div>
+
 </main>
 //= template/footer-new.html
 
